Add styles to landing page

--- a/landing.html
+++ b/landing.html
@@ -10,16 +10,16 @@
       <section class="touristic--place">
         <div class="touristic--place__img"><img src="images/huanuco.jpg" alt="Huanuco City"></div>
         <div class="touristic--place__information"><span class="touristic--place__category">Tourism</span>
-          <h1 class="touristic--place__title">Huanuco City, come here and discover the pretty places does it have</h1>
+          <h1 class="touristic--place__title">Come here and discover the pretty places does it have</h1>
         </div>
-        <div class="touristic--place__typical--animal"><img src="images/ronsoco.jpg" alt="Ronsoco Animal"><span class="touristic--place__animal--title">Typical animal</span><span class="touristic--place__name">Ronsoco</span></div>
+        <div class="touristic--place__typical--animal"><img src="images/ronsoco.jpg" alt="Ronsoco Animal"><span class="touristic--place__typical--animal--title">Typical animal</span><span class="touristic--place__typical--animal--name">Ronsoco</span></div>
       </section>
       <article class="main--article">
         <p class="main--article__intro">Huánuco department is located in the central part of Peru, between the western mountain range and the Ucayali River. Huánuco has a bumpy relief. It has snowfalls, mountain ranges, warm valleys and Amazon rainforests, which attract tourists and walkers. </p>
         <p>The height of huanuqueño territory ranges from 80 to 6000 m.s.n.m. The climate of the department of Huanuco is temperate with an average annual temperature of 20oC.</p>
         <p>The department of Huánuco borders in the north with the departments of La Libertad, San Martín, Loreto and Ucayali; by The department of Huánuco borders in the north with the departments of La Libertad, San Martín, Loreto and Ucayali; east with Ucayali department; to the south with the department of Pasco and to the west with the departments of Lima and Ancash. Huánuco has a territorial area of 35,315 km2 and its population exceeds 600 thousand inhabitants. to the south with the department of Pasco and to the west with the departments of Lima and Ancash. Huánuco has a territorial area of 35,315 km2 and its population exceeds 600 thousand inhabitants.</p>
         <p>The capital of huánuco department is the city of Huánuco. Among the other major cities are Tingo María, Dos de Mayo, Ambo, Leoncio Prado and Pachitea. In Huánuco you will find everything to relax, have fun, learn more about Peruvian culture, enjoy adventure tourism and its rich meals and your visit in this beautiful apartment will be unforgettable.</p>
-        <h2>No te pierdas...</h2>
+        <h2>Don't miss out...</h2>
       </article>
       <section class="container--boxes">
         <div class="box">
