Add last footer styles

--- a/landing.html
+++ b/landing.html
@@ -24,23 +24,32 @@
       <section class="container--boxes">
         <div class="box">
           <div class="box__img"><img src="images/cajamarca.jpg" alt="Cajamarca City"/></div>
-          <div class="box__content"><span class="box__category">Tourism</span>
-            <h3>there are many turistic places here and delicious food, come and discover it!</h3>
-            <p>El departamento del Cajamarca se encuentra ubicado al norte del territorio peruano, en la cadena occidental de los Andes y abarca zonas de sierra y selva. El origen de la ciudad de Cajamarca se inicia aproximadamente 3 mil años atrás con los primeros grupos humanos Huacaloma, Layzón, Cumbe Mayo y Otuzco.</p><a>Read more</a>
+          <div class="box__content">
+            <div class="box__content--information"> <span class="box__content--information__category">Tourism</span>
+              <h3>there are many turistic places here and delicious food, come and discover it!</h3>
+              <p>El departamento del Cajamarca se encuentra ubicado al norte del territorio peruano, en la cadena occidental de los Andes y abarca zonas de sierra y selva. El origen de la ciudad de Cajamarca se inicia aproximadamente 3 mil años atrás con los primeros grupos humanos Huacaloma, Layzón, Cumbe Mayo y Otuzco.</p>
+            </div>
+            <div class="box__content--read_more"><a>Read more</a></div>
           </div>
         </div>
         <div class="box">
           <div class="box__img"><img src="images/tingomaria.jpg" alt="Tingo Maria City"/></div>
-          <div class="box__content"><span class="box__category">Tourism</span>
-            <h3>Do you want adventure? there are exotic animals and delicious food</h3>
-            <p>Tingo María is characterized by having a hill, in which lies the figure of a beautiful woman called 'sleeping beauty' who represents a legend on whose feet circulate the Huallaga and Monsoon rivers circulate. This city is a focus of important tourist attraction, which presents a beautiful and typical jungle landscape.</p><a>Read more</a>
+          <div class="box__content">
+            <div class="box__content--information"> <span class="box__content--information__category">Tourism</span>
+              <h3>Do you want adventure? there are exotic animals and delicious food</h3>
+              <p>Tingo María is characterized by having a hill, in which lies the figure of a beautiful woman called 'sleeping beauty' who represents a legend on whose feet circulate the Huallaga and Monsoon rivers circulate. This city is a focus of important tourist attraction, which presents a beautiful and typical jungle landscape.</p>
+            </div>
+            <div class="box__content--read_more"><a>Read more</a></div>
           </div>
         </div>
         <div class="box">
           <div class="box__img"><img src="images/lamerced.jpg" alt="La Merced City"/></div>
-          <div class="box__content"><span class="box__category">Tourism</span>
-            <h3>¿Te encanta el café? aquí lo puedes encontrar y disfrutar de los lugares y la comida delisiosa que La Merced te ofrece</h3>
-            <p>La Merced es conocida como la “Ciudad Cafetalera”, aquella se encuentra en la Selva Central del país, dentro de la provincia de Chanchamayo, en Junín, y es capital tanto del distrito  homónimo en el que se ubica, como de la provincia de Chanchamayo. Pese a ser una ciudad en la Amazonía del Perú, La Merced cuenta en su núcleo urbano con distintos alojamientos que si bien no son hoteles de lujo, brindarán al viajero la seguridad y estabilidad que no conseguirán acampando en las zonas rurales del territorio, y a muy bajos costos.</p><a>Read more</a>
+          <div class="box__content">
+            <div class="box__content--information"> <span class="box__content--information__category">Tourism</span>
+              <h3>Do you love coffee? here you can find it and enjoy the places and the delicious food that La Merced offers you</h3>
+              <p>La Merced is known as the 'Coffee City', which is located in the central forest of the country, within the province of Chanchamayo, in Junín, and is the capital of both the district of the same name in which it is located, as well as the province of Chanchamayo. Despite being a city in the Amazon of Peru, La Merced has in its urban center different accommodations that although they are not luxury hotels, will provide the traveler with the security and stability that they will not achieve by camping in the rural areas of the territory, and at very low costs.</p>
+            </div>
+            <div class="box__content--read_more"><a>Read more</a></div>
           </div>
         </div>
       </section>
